--- a/DesktopWPFApp/DesktopWPFApp.csproj
+++ b/DesktopWPFApp/DesktopWPFApp.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FontAwesome5" Version="2.1.6" />
     <PackageReference Include="System.IO.Ports" Version="6.0.0" />
   </ItemGroup>
 
